--- a/.github/workflows/nightly_build_cpu.yaml
+++ b/.github/workflows/nightly_build_cpu.yaml
@@ -1,76 +1,155 @@
 name: Push CPU Binary Nightly
-
 on:
-  # run every day at 11:15am
-  schedule:
-    - cron:  '15 11 * * *'
-  # or manually trigger it
-  workflow_dispatch:
-    inputs:
-      append_to_version:
-        description: "Optional value to append to version string"
-
+  push:
+    branches:
+      - main
 
 jobs:
   unit_tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9]
     steps:
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Setup conda env
         uses: conda-incubator/setup-miniconda@v2
         with:
-          miniconda-version: "latest"
           activate-environment: test
+          miniconda-version: latest
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          set -eux
+        run: 'set -eux
+
           conda activate test
+
           pip install -r requirements.txt
+
           python setup.py sdist bdist_wheel
+
           pip install dist/*.whl
+
           pip install -r dev-requirements.txt
+
           conda install pytorch cpuonly -c pytorch-nightly
-      - name: Run unit tests
+
+          '
         shell: bash -l {0}
-        run: |
-          set -eux
+      - id: measurement-4
+        name: Record Measurement After Install dependencies
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install dependencies
+          task: get-measurement
+      - name: Run unit tests
+        run: 'set -eux
+
           conda activate test
+
           pytest tests -vv
-  # TODO figure out how to deduplicate steps
+
+          '
+        shell: bash -l {0}
+      - id: measurement-6
+        name: Record Measurement After Run unit tests
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Run unit tests
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${ steps.final-measurement.outputs.data-total-json }' > total_energy_consumption-1740222587.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption-1740222587.json
+    strategy:
+      matrix:
+        python-version:
+          - 3.8
+          - 3.9
   upload_to_pypi:
     needs: unit_tests
     runs-on: ubuntu-latest
     steps:
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Setup conda env
         uses: conda-incubator/setup-miniconda@v2
         with:
-          miniconda-version: "latest"
           activate-environment: test
+          miniconda-version: latest
           python-version: 3.8
       - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          set -eux
+        run: 'set -eux
+
           conda activate test
+
           conda install pytorch cpuonly -c pytorch-nightly
+
           pip install -r requirements.txt
+
           pip install --no-build-isolation -e ".[dev]"
-      - name: Upload to PyPI
+
+          '
         shell: bash -l {0}
-        env:
-          PYPI_USER: ${{ secrets.PYPI_USER }}
+      - id: measurement-4
+        name: Record Measurement After Install dependencies
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install dependencies
+          task: get-measurement
+      - env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        run: |
-          set -eux
+          PYPI_USER: ${{ secrets.PYPI_USER }}
+        name: Upload to PyPI
+        run: 'set -eux
+
           conda activate test
+
           pip install twine
-          python setup.py --nightly --append-to-version=${{ github.event.inputs.append_to_version }} sdist bdist_wheel
+
+          python setup.py --nightly --append-to-version=${{ github.event.inputs.append_to_version
+          }} sdist bdist_wheel
+
           twine upload --username "$PYPI_USER" --password "$PYPI_TOKEN" dist/* --verbose
+
+          '
+        shell: bash -l {0}
+      - id: measurement-6
+        name: Record Measurement After Upload to PyPI
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Upload to PyPI
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${ steps.final-measurement.outputs.data-total-json }' > total_energy_consumption-1740222587.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption-1740222587.json
