--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -1,107 +1,238 @@
 name: Push Release to PyPi
-
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  unit_tests:
+  build_docs:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9]
     steps:
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Setup conda env
         uses: conda-incubator/setup-miniconda@v2
         with:
-          miniconda-version: "latest"
           activate-environment: test
+          miniconda-version: latest
+      - name: Install dependencies
+        run: 'set -eux
+
+          conda activate test
+
+          pip install -r requirements.txt
+
+          pip install -r dev-requirements.txt
+
+          python setup.py sdist bdist_wheel
+
+          pip install dist/*.whl
+
+          conda install pytorch cpuonly -c pytorch-nightly
+
+          '
+        shell: bash -l {0}
+      - id: measurement-4
+        name: Record Measurement After Install dependencies
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install dependencies
+          task: get-measurement
+      - name: Build docs
+        run: 'set -eux
+
+          conda activate test
+
+          cd docs
+
+          pip install -r requirements.txt
+
+          RELEASE_BUILD=1 make html
+
+          touch build/html/.nojekyll
+
+          cd ..
+
+          '
+        shell: bash -l {0}
+      - id: measurement-6
+        name: Record Measurement After Build docs
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Build docs
+          task: get-measurement
+      - name: Deploy docs to Github pages
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
+        with:
+          branch: gh-pages
+          folder: docs/build/html
+          target-folder: stable
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${ steps.final-measurement.outputs.data-total-json }' > total_energy_consumption-1740222587.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption-1740222587.json
+  unit_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
+      - name: Check out repo
+        uses: actions/checkout@v2
+      - name: Setup conda env
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: test
+          miniconda-version: latest
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          set -eux
+        run: 'set -eux
+
           conda activate test
+
           pip install -r requirements.txt
+
           python setup.py sdist bdist_wheel
+
           pip install dist/*.whl
+
           pip install -r dev-requirements.txt
+
           conda install pytorch cpuonly -c pytorch-nightly
-      - name: Run unit tests
+
+          '
         shell: bash -l {0}
-        run: |
-          set -eux
+      - id: measurement-4
+        name: Record Measurement After Install dependencies
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install dependencies
+          task: get-measurement
+      - name: Run unit tests
+        run: 'set -eux
+
           conda activate test
+
           pytest tests -vv
-  # TODO figure out how to deduplicate steps
+
+          '
+        shell: bash -l {0}
+      - id: measurement-6
+        name: Record Measurement After Run unit tests
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Run unit tests
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${ steps.final-measurement.outputs.data-total-json }' > total_energy_consumption-1740222587.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption-1740222587.json
+    strategy:
+      matrix:
+        python-version:
+          - 3.8
+          - 3.9
   upload_to_pypi:
     needs: unit_tests
     runs-on: ubuntu-latest
     steps:
+      - name: Start Energy Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: start-measurement
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Setup conda env
         uses: conda-incubator/setup-miniconda@v2
         with:
-          miniconda-version: "latest"
           activate-environment: test
+          miniconda-version: latest
           python-version: 3.8
       - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          set -eux
+        run: 'set -eux
+
           conda activate test
+
           conda install pytorch cpuonly -c pytorch-nightly
+
           pip install -r requirements.txt
+
           pip install  --no-build-isolation -e ".[dev]"
-      - name: Upload to PyPI
+
+          '
         shell: bash -l {0}
-        env:
-          PYPI_USER: ${{ secrets.PYPI_USER }}
+      - id: measurement-4
+        name: Record Measurement After Install dependencies
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          label: Install dependencies
+          task: get-measurement
+      - env:
           PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-        run: |
-          set -eux
+          PYPI_USER: ${{ secrets.PYPI_USER }}
+        name: Upload to PyPI
+        run: 'set -eux
+
           conda activate test
+
           pip install twine
+
           python setup.py sdist bdist_wheel
+
           twine upload --username "$PYPI_USER" --password "$PYPI_TOKEN" dist/* --verbose
-  build_docs:
-    runs-on: ubuntu-latest
-    permissions:
-      # Grant write permission here so that the doc can be pushed to gh-pages branch
-      contents: write
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
-      - name: Setup conda env
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          miniconda-version: "latest"
-          activate-environment: test
-      - name: Install dependencies
+
+          '
         shell: bash -l {0}
-        run: |
-          set -eux
-          conda activate test
-          pip install -r requirements.txt
-          pip install -r dev-requirements.txt
-          python setup.py sdist bdist_wheel
-          pip install dist/*.whl
-          conda install pytorch cpuonly -c pytorch-nightly
-      - name: Build docs
-        shell: bash -l {0}
-        run: |
-          set -eux
-          conda activate test
-          cd docs
-          pip install -r requirements.txt
-          RELEASE_BUILD=1 make html
-          touch build/html/.nojekyll
-          cd ..
-      - name: Deploy docs to Github pages
-        uses: JamesIves/github-pages-deploy-action@v4.4.1
+      - id: measurement-6
+        name: Record Measurement After Upload to PyPI
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
         with:
-            branch: gh-pages # The branch the action should deploy to.
-            folder: docs/build/html # The folder the action should deploy.
-            target-folder: stable
+          json-output: true
+          label: Upload to PyPI
+          task: get-measurement
+      - id: display-measurement
+        name: Display Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          json-output: true
+          task: display-results
+      - name: Save Total Energy Consumption Data
+        run: echo '${ steps.final-measurement.outputs.data-total-json }' > total_energy_consumption-1740222587.json
+      - name: Upload Energy Consumption Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-energy-consumption
+          path: total_energy_consumption-1740222587.json
