--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -23,7 +23,7 @@ jobs:
           activate-environment: test
           miniconda-version: latest
       - name: Install dependencies
-        run: 'set -eux
+        run: "set -eux
 
           conda activate test
 
@@ -37,7 +37,7 @@ jobs:
 
           conda install pytorch cpuonly -c pytorch-nightly
 
-          '
+          "
         shell: bash -l {0}
       - id: measurement-4
         name: Record Measurement After Install dependencies
@@ -47,7 +47,7 @@ jobs:
           label: Install dependencies
           task: get-measurement
       - name: Build docs
-        run: 'set -eux
+        run: "set -eux
 
           conda activate test
 
@@ -61,7 +61,7 @@ jobs:
 
           cd ..
 
-          '
+          "
         shell: bash -l {0}
       - id: measurement-6
         name: Record Measurement After Build docs
@@ -106,7 +106,7 @@ jobs:
           miniconda-version: latest
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: 'set -eux
+        run: "set -eux
 
           conda activate test
 
@@ -120,7 +120,7 @@ jobs:
 
           conda install pytorch cpuonly -c pytorch-nightly
 
-          '
+          "
         shell: bash -l {0}
       - id: measurement-4
         name: Record Measurement After Install dependencies
@@ -130,13 +130,13 @@ jobs:
           label: Install dependencies
           task: get-measurement
       - name: Run unit tests
-        run: 'set -eux
+        run: "set -eux
 
           conda activate test
 
           pytest tests -vv
 
-          '
+          "
         shell: bash -l {0}
       - id: measurement-6
         name: Record Measurement After Run unit tests
